# Navide

./: .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.ja-JP.md  README.md  README.zh-TW.md  RELEASING.md  SECURITY.md  build.command  build.sh  electron.vite.config.ts  index.js  package.json  playwright.config.ts  pnpm-lock.yaml  release.sh  test_bp.exp  test_bp.js  test_newline.exp  test_newline.js  test_newline.py  test_newline_zsh.exp  test_pt.py  tsconfig.node.json  tsconfig.web.json  vite.mini-ide.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  secret-scan.yml
.registry-data/: registry.db
backend/: agent_team_backend.spec  app.py  pyproject.toml  run.py  test_log.py  test_pt.py
backend/agent_team_backend/: __main__.py  ai_chat_service.py  ai_chat_settings.py  ai_chat_tools.py  analyzer.py  analyzer_ollama.py  analyzer_settings.py  app.py  applog.py  chat_store.py  claude_hooks.py  codex_home.py  commit_message_prompt.py  doc_injector.py  editor_service.py  fs_service.py  git_askpass_helper.py  git_service.py  git_watcher.py  history_store.py  ipc.py  issue_service.py  mcp_manager.py  mcp_settings.py  onboarding_deps.py  pending_registry.py  plan_history.py  plan_provisioning.py  profiles_store.py  projects.py  pty_registry.py  recent_workspaces.py  review_service.py  roles_store.py  search_service.py  spawn_history.py  stages_store.py  store_migrations.py  terminals.py  tokens_store.py  (+3 more)
backend/agent_team_backend/log_readers/: __init__.py  antigravity.py  attribution.py  base.py  claude.py  codex.py  gemini.py  grok.py  kimi.py  profile_registry.py  watcher.py
backend/agent_team_backend/plan_assets/: _spec.md  _template.html
backend/agent_team_backend/plugins/: __init__.py  capabilities.py  host.py  manifest.py
backend/agent_team_backend/plugins/examples/: mini-ide.plugin.json
backend/agent_team_backend/plugins/examples/fs_reader_plugin/: backend.py  plugin.json
backend/agent_team_backend/plugins/examples/noop_plugin/: backend.py  plugin.json
backend/tests/: conftest.py  test_ai_chat_service.py  test_ai_chat_settings.py  test_ai_chat_tools.py  test_analyzer_routing.py  test_analyzer_tokens.py  test_antigravity_log_reader.py  test_app_cli_profiles.py  test_app_enhance_prompt.py  test_app_fs_handlers.py  test_app_fs_page.py  test_app_fs_raw.py  test_app_session_exists.py  test_app_terminal_create.py  test_app_terminal_exit.py  test_app_tmux.py  test_app_worktree_handlers.py  test_applog_data_dir.py  test_attribution.py  test_chat_store.py  test_claude_first_user_prompts.py  test_claude_hooks.py  test_claude_log_reader.py  test_codex_home.py  test_codex_log_reader.py  test_doc_injector.py  test_foo.py  test_fs_convert_office.py  test_fs_list_archive.py  test_fs_service.py  test_gemini_log_reader.py  test_git_accounts.py  test_git_askpass.py  test_git_service.py  test_git_watcher.py  test_history_store.py  test_issue_service.py  test_log_readers_grok.py  test_log_readers_kimi.py  test_log_readers_profile_aware.py  (+56 more)
docs/: README.md  architecture.md  cli-agent-adapter.md  cli-extension-guide.md  cli-log-formats.md  development-workflow.md  editor-design.md  getting-started.md  git-control.md  ipc-contract.md  keybindings.md  manifesto.md  privacy.md  product-positioning.md  product-spec.md  releases.md  roadmap.md  route-engine.md  sdd-agent-team.md  spec.md  sqlite-schema.md  technical-design.md  terminal-pty-contract.md  troubleshooting.md  user-guide.md  vision.md
docs/en-US/: README.md  architecture.md  (+11 more)
e2e/: editor-open.spec.ts  launch.spec.ts  session-prebind.spec.ts
marketing/: README.md  app.js  demo-storyboard.md  founder-case-study.md  index.html  launch-kit.md  positioning.md  styles.css  validation-guide.md
marketplace/registry/: .gitignore  FORMAT.md  README.md  pyproject.toml
marketplace/registry/registry/: __init__.py  app.py  auth.py  cli.py  config.py  db.py  manifest.py  models.py  package.py  repository.py  schemas.py  signing.py  storage.py  trust.py  versions.py  web.py
marketplace/registry/registry/web_static/: style.css
marketplace/registry/registry/web_templates/: base.html  detail.html  home.html
marketplace/registry/tests/: conftest.py  fixtures.py  test_api.py  test_cli.py  test_discovery_api.py  test_manifest.py  test_package.py  test_publish_security.py  test_signing.py  test_storage.py  test_trust.py  test_web.py
resources/: icon.icns
scripts/: check-issues.sh  set-release-version.mjs  update-readme-download-links.mjs  verify-auto-answer.mjs  verify-context-handoff.mjs  verify-release-version.mjs
(+392 files in other folders)
