[project]
name = "agent-team-backend"
version = "0.0.1"
description = "Agent-Team Python backend (Phase 1 minimal skeleton)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "mcp>=1.27.1",
    "uvicorn[standard]>=0.32",
    "watchdog>=4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_team_backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
