[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["registry"]

[project]
name = "navide-marketplace-registry"
version = "0.1.0"
description = "Self-hosted plugin marketplace registry for the Navide / Agent-Team project"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=42.0",
    "fastapi>=0.115",
    "jinja2>=3.1",
    "markdown-it-py>=3.0",
    "packaging>=24.0",
    "python-multipart>=0.0.9",
    "sqlmodel>=0.0.22",
    "uvicorn[standard]>=0.32",
]

[project.scripts]
navide-plugin = "registry.cli:main"

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["ASYNC"]
ignore = ["ASYNC109", "ASYNC240"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ASYNC"]
